@@ -21,7 +21,8 @@
       </wizard>
 
       <properties>
-        <property name="bitrate" type="int" />
+        <property name="bitrate" type="int"
+                  description="Bitrate to encode at (in bps)" />
         <property name="drop-probability" type="float"
                   description="workaround for loss of sync"  />
       </properties>
