@@ -23,7 +23,8 @@
       </wizard>
 
       <properties>
-        <property name="bitrate" type="int" />
+        <property name="bitrate" type="int"
+                  description="Bitrate to encode at (in bps)" />
         <property name="version" type="int" />
         <property name="complexity" type="int" />
         <property name="sharpness" type="int" />
