@@ -1,3 +1,9 @@
+2008-05-07  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/component/encoders/wma/wma.xml:
+	* flumotion/component/encoders/wmv/wmv.xml:
+	  Add description for bitrate.
+
 2008-05-06  Johan Dahlin  <johan@flumotion.com>
 
 	* flumotion/component/encoders/wma/wma_wizard.py:
